--- a/src/scss/app.module.scss
+++ b/src/scss/app.module.scss
@@ -1,10 +1,9 @@
 .container {
-    min-height: $app-container;
     background-color: #F8F9F9;
+    min-height: calc(100vh - 65px);
 }
 
 .wrapper { 
-    max-width: $app-wrapper;
     margin: 0 auto;
     border: 1px solid green;
 }
